--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 <!--        <module>yudao-module-erp</module>-->
 <!--        <module>yudao-module-ai</module>-->
         <module>luoyi-dependencies</module>
+        <module>luoyi-framework</module>
     </modules>
 
     <properties>
