--- a/luoyi-framework/pom.xml
+++ b/luoyi-framework/pom.xml
@@ -25,4 +25,22 @@
     </description>
     <url>https://github.com/iqeq00/luoyi</url>
 
+    <modules>
+        <module>luoyi-common</module>
+        <module>luoyi-spring-boot-starter-excel</module>
+        <module>luoyi-spring-boot-starter-job</module>
+        <module>luoyi-spring-boot-starter-monitor</module>
+        <module>luoyi-spring-boot-starter-mq</module>
+        <module>luoyi-spring-boot-starter-mybatis</module>
+        <module>luoyi-spring-boot-starter-protection</module>
+        <module>luoyi-spring-boot-starter-redis</module>
+        <module>luoyi-spring-boot-starter-security</module>
+        <module>luoyi-spring-boot-starter-web</module>
+        <module>luoyi-spring-boot-starter-test</module>
+        <module>luoyi-spring-boot-starter-websocket</module>
+        <module>luoyi-spring-boot-starter-biz-data-permission</module>
+        <module>luoyi-spring-boot-starter-biz-ip</module>
+        <module>luoyi-spring-boot-starter-biz-tenant</module>
+    </modules>
+
 </project>
